--- a/scikit_learn_examples_2.ipynb
+++ b/scikit_learn_examples_2.ipynb
@@ -8,6 +8,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn import datasets\n",
+    "import pandas as pd\n",
+    "from sklearn.externals import joblib\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.cross_validation import train_test_split\n",
+    "from sklearn import grid_search\n",
+    "from sklearn import svm"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -16,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 705,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -27,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 721,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -52,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 722,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -63,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 723,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -81,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 724,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -358,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 747,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -367,7 +384,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.793147429284 SVR(C=250, cache_size=200, coef0=0.0, degree=1, epsilon=2, gamma=0.03,\n",
+      "0.830252960282 SVR(C=200, cache_size=200, coef0=0.0, degree=1, epsilon=1.5, gamma=0.03,\n",
       "  kernel='rbf', max_iter=-1, shrinking=True, tol=0.001, verbose=False)\n"
      ]
     }
@@ -382,6 +399,49 @@
     "grid.fit(X_train, y_train)\n",
     "print grid.best_score_, grid.best_estimator_\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.90688431348860954"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = grid.best_estimator_\n",
+    "model.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.90688431348860954"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
